--- a/styles/db-theme/_page--about-us.scss
+++ b/styles/db-theme/_page--about-us.scss
@@ -479,7 +479,7 @@
     }
 
     @media only screen and (max-width: 480px) {
-      height: 1200px;
+      height: 1000px;
       padding-bottom: unset;
     }
 
@@ -635,10 +635,12 @@
 
           &:nth-child(2) {
             // margin-top: 658px;
-            margin-top: 800px;
+            // margin-top: 800px;
+            margin-top: 1200px;
             @media only screen and (max-width: 1080px) {
               // background-color: #0F051B;
-              margin-top: 700px;
+              // margin-top: 700px;
+              margin-top: 800px;
             }
 
             @media only screen and (max-width: 768px) {
@@ -975,11 +977,12 @@
   }
 
   .db-section--spacer {
-    background-color: #0F051B;
+    background-color: #0E051A;
     height: 200px;
   }
+
   .db-section--about-us-mb-slider {
-    background: #0F051B;
+    background: #0E051A;
     padding-top: 130px;
     display: none;
 
