--- a/sections/page-home.liquid
+++ b/sections/page-home.liquid
@@ -108,7 +108,8 @@
           <div class="db-inner-row">
             <div class="db-inner-col">
               <div class="db-widget-container"
-                ref="widgetContainer">
+                ref="widgetContainer"
+                v-on:scroll="handleScroll($event)">
                 <div class="db-widget-row">
                   <div class="db-widget-col">
                     <div class="db-widget-list">
@@ -253,6 +254,9 @@
         let self = this;
         let scrollTop = widgetContainer.scrollTop;
         widgetContainer.scrollTop = scrollTop + 100;
+      },
+      handleScroll($event) {
+        console.log('handleScroll =', $event);
       },
     }
   };
